Fixed logo image on smaller screens

--- a/source/stylesheets/home.scss
+++ b/source/stylesheets/home.scss
@@ -182,7 +182,7 @@ p {
 }
 
 #logo {
-	width: 75%;
+	width: 65%;
 	max-width: 800px;
 	display: block;
 	margin: 0 auto;
